--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root, main {
+  width: 100%;
+  overflow-x: hidden;
+  position: relative;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-display);
   font-weight: 700;
